# ECS

./: .gitmodules  CMakeLists.txt  README.md  cmake.yml
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-windows.yml  cmake.yml
src/: CMakeLists.txt  api.cpp  api.h  component.h  componentmanager.cpp  componentmanager.h  ecs.cpp  ecs.h  engine.cpp  engine.h  entity.h  entitymanager.cpp  entitymanager.h  icomponent.cpp  icomponent.h  ientity.cpp  ientity.h  isystem.cpp  isystem.h  platform.h  system.cpp  system.h  systemmanager.cpp  systemmanager.h
src/event/: event.h  event_delegate.h  event_dispatcher.cpp  event_dispatcher.h  event_handler.cpp  event_handler.h  eventdispatcher.h  eventhandler.h  ievent.cpp  ievent.h  ievent_delegate.h  ievent_dispatcher.h  ievent_listener.cpp  ievent_listener.h  ieventdelegate.cpp  ieventdelegate.h  ieventdispatcher.cpp  ieventdispatcher.h
src/log/: logger.h  logger_macro.h  logger_manager.cpp  logger_manager.h  loggermacro.h  loggermanager.h
src/memory/: memory_chunk_allocator.h  memory_manager.cpp  memory_manager.h  memorymanager.cpp  memorymanager.h
src/memory/allocators/: iallocator.cpp  iallocator.hpp  linear_allocator.cpp  linear_allocator.h  linearallocator.h  pool_allocator.cpp  pool_allocator.h  poolallocator.h  stack_allocator.cpp  stack_allocator.h  stackallocator.cpp  stackallocator.h
src/util/: family_type_id.h  familytypeid.h  global.hpp  handle.h  timer.h
